# PathForge

./: CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  ModelLoader.cpp  ModelLoader.h  README.md  VtkViewer.cpp  VtkViewer.h  kl.step  main.cpp
Feature/: CylinderDetectionStrategy.h  Feature.cpp  Feature.h  FeatureData.cpp  FeatureData.h  FeatureDetectionStrategy.h  FeatureExtractor.cpp  FeatureExtractor.h  FeatureManager.cpp  FeatureManager.h  FeatureRecognizer.cpp  FeatureRecognizer.h  FeatureType.h  HoleRecognizer.cpp  HoleRecognizer.h  PlanarFaceDetectionStrategy.h  PocketRecognizer.cpp  PocketRecognizer.h  SlotRecognizer.cpp  SlotRecognizer.h
Geometry/: CAMGeometry.h  EnvelopeExtractor.cpp  EnvelopeExtractor.h  FaceBoundaryExtractor.cpp  FaceBoundaryExtractor.h  FaceClassifier.cpp  FaceClassifier.h  MathUtils.cpp  MathUtils.h  ShapeUtils.cpp  ShapeUtils.h  WireOffsetter.cpp  WireOffsetter.h
Geometry/Bridge/: CamFaceBuilder.cpp  CamFaceBuilder.h  GeometryConverter.h
Geometry/CAM/: CamDirection.h  CamEdge.h  CamFace.cpp  CamFace.h  CamPathPoint.h  CamPoint.cpp  CamPoint.h  CamPoint2D.h  CamTypes.h  CamVector.cpp  CamVector.h  CamWire.cpp  CamWire.h
Path/: Strategy.h  StrategyFactory.cpp  StrategyFactory.h  Toolpath.cpp  Toolpath.h
Path/Core/: DrivePatternGenerator.cpp  DrivePatternGenerator.h  SurfaceToolpathCore.h  SurfaceToolpathCoreImpl.cpp
Path/MultiAxis/: Axis3Plus2Positioning.cpp  Axis3Plus2Positioning.h  Axis5Interpolator.cpp  Axis5Interpolator.h  InterferenceChecker.cpp  InterferenceChecker.h  MultiAxisConfig.cpp  MultiAxisConfig.h  MultiAxisEngine.cpp  MultiAxisEngine.h  MultiAxisPoint.cpp  MultiAxisPoint.h  ToolAxisController.cpp  ToolAxisController.h
Path/PostProcess/: NCConfig.h  PostProcessor.cpp  PostProcessor.h  PostProcessorFactory.cpp  PostProcessorFactory.h
Path/Projection/: Projector.cpp  Projector.h
Path/Strategies/: AdaptiveCleaningStrategy.cpp  AdaptiveCleaningStrategy.h  Cam2DFaceMillingStrategy.cpp  Cam2DFaceMillingStrategy.h  CamAdaptiveCleaningStrategy.cpp  CamAdaptiveCleaningStrategy.h  CamMachiningParameters.h  CamPathStrategy.h  ContourMillingStrategy.cpp  ContourMillingStrategy.h  DrillingStrategy.cpp  DrillingStrategy.h  PathStrategy.cpp  PathStrategy.h  PocketMillingStrategy.cpp  PocketMillingStrategy.h  TwoDFaceMillingStrategy.cpp  TwoDFaceMillingStrategy.h
Simulation/: CollisionDetector.cpp  CollisionDetector.h  GougeDetector.cpp  GougeDetector.h  MaterialRemovalSimulator.cpp  MaterialRemovalSimulator.h  SimulationEngine.cpp  SimulationEngine.h  SimulationResults.cpp  SimulationResults.h
Topology/: AdjacencyGraph.cpp  AdjacencyGraph.h  FaceCollector.cpp  FaceCollector.h
